[metadata]
name = eth-index
url = https://github.com/trustlines-protocol/py-eth-index
description = Indexer for the ethereum blockchain
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = MIT
license_file = LICENSE
keywords = ethereum indexer database
author = Trustlines-Network
author_email = contact@brainbot.com

classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6


[options.packages.find]
where=src

[options]
python_requires = >= 3.8
setup_requires = setuptools_scm
package_dir=
    =src
packages=find:

install_requires =
    web3>=5.0
    psycopg2>=2.7
    click
    attrs
    trustlines-contracts-bin>=2.0.0

[options.entry_points]
console_scripts =
    ethindex=ethindex.cli:cli

[flake8]
max-line-length = 119
ignore =
       # P101 format string does contain unindexed parameters
      P101
       # default:
       E121,E123,E126,E226,E24,E704,W503,W504

[isort]
line_length=88
known_future_library=future
known_first_party=ethindex
default_section=THIRDPARTY
combine_as_imports=1
# black compatibility
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
